updates widths to fix jumping

--- a/djangocms_admin_style/sass/components/_changelist.scss
+++ b/djangocms_admin_style/sass/components/_changelist.scss
@@ -122,7 +122,7 @@
             }
             form #searchbar {
                 width: auto !important;
-                max-width: 310px !important;
+                max-width: 257px !important;
                 font-size: $font-size-small;
                 padding: 9px 5px !important;
                 vertical-align: middle;
@@ -257,7 +257,7 @@
         }
     }
     #changelist-search {
-        max-width: 345px;
+        max-width: 335px;
         #limit_search_to_folder {
             vertical-align: middle;
             margin-top: 2px;
@@ -281,11 +281,11 @@
             text-indent: -9999px;
             padding: 10px 20px !important;
             margin-left: 10px;
-            margin-right: 10px;
             background-image: url('../img/icon_search_white@2x.png') !important;
             background-repeat: no-repeat !important;
             background-position: 10px center !important;
             background-size: 23px !important;
+            box-sizing: border-box;
             &:active {
                 background-image: url('../img/icon_search_white@2x.png') !important;
             }
